[package]
name = "winutil"
version = "0.1.0"
authors = ["Dave Lancaster <lancaster.dave@gmail.com>"]
description = "Simple library providing wrappers around a handful of useful winapi calls."
readme = "README.md"
license = "MIT"

[dependencies]
winapi = "0.2"
kernel32-sys = "0.1"
advapi32-sys = "0.1"
