[package]
name = "winutil"
version = "0.1.0"
authors = ["Dave Lancaster <lancaster.dave@gmail.com>"]
description = "Simple library providing wrappers around a handful of useful winapi calls."
readme = "README.md"
license = "MIT"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wow64apiset", "processthreadsapi", "winbase"] }
